add list style type in assignment and modified transition properties

--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
             <h3>Various Types of <mark>ANODIZING</mark> are available here</h3>
             <div class="proyek-item-2">
                 <ul class="menu-bar-2">
-                    <li><a href=".layanan-item3">Type I: Chromic Acid Anodizing</a></li>
-                    <li><a href=".layanan-item4">Type II: Sulfuric Acid Anodizing</a></li>
-                    <li><a href=".layanan-item5">Type III: Hard Anodizing</a></li>
+                    <li><a href="#">Type I: <b>Chromic Acid Anodizing</b></a></li>
+                    <li><a href="#">Type II: <b>Acid Anodizing</b> </a></li>
+                    <li><a href="#">Type III: <b> Anodizing</b></a></li>
                 </ul>
             </div>
 
